--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.17.2",
     "login": "^0.8.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-currency-format": "^1.1.0",
+    "react-currency-format-latest": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
